--- a/src/components/pages/Main.css
+++ b/src/components/pages/Main.css
@@ -89,6 +89,7 @@
 .main-img {
   text-align: center;
   height: 40vh;
+  width: 65%
 }
 
 .main-projects {
